Edit index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <body>
 	<h1>Mon titre 1</h1>
 	<p>Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
-
+	<p class="test">Lorem ipsum dolor sit amet consectetur 
+		adipisicing elit. Officia assumenda 
+		asperiores enim quae, quis consequatur laudantium, 
+		pariatur autem eligendi ea atque quidem inventore 
+		exercitationem voluptatibus. Nam quisquam vel pariatur 
+		delectus.</p>
 </body>
-</html>>
+</html>
