creation et modification de l'index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		asperiores enim quae, quis consequatur laudantium, 
 		pariatur autem eligendi ea atque quidem inventore 
 		exercitationem voluptatibus. Nam quisquam vel pariatur 
-		delectus.</p>
+		delectus.
+	
+		<a href="page.html"> lien vers page2</a>
+	</p>
 </body>
 </html>
